Fixed landing spacing error

--- a/src/Home.css
+++ b/src/Home.css
@@ -158,7 +158,7 @@ aboutFont{
 }
 
 
-@media screen and (min-width: 100px){
+@media screen and (min-width: 200px){
   html{
     font-size: 10px;
   }
@@ -177,55 +177,99 @@ aboutFont{
   }
 
 }
-
+@media screen and (min-width: 400px){
+  html{
+    font-size: 13px;
+  }
+  .experience, .projects, .skills,.photos,.contact,.profile{
+    width: 100% !important;
+  }
+  
+}
 @media screen and (min-width: 500px){
     html{
-      font-size: 14px;
+      font-size: 13px;
     }
     .experience, .projects, .skills,.photos,.contact{
       width: 100% !important;
     }
     
   }
-  @media screen and (min-width: 570px){
+  @media screen and (min-width: 580px){
     html{
-      font-size: 15px;
+      font-size: 13px;
+    }
+    .experience, .projects, .skills,.photos,.contact,.profile{
+      width: 100% !important;
     }
    
   }
   @media screen and (min-width: 620px){
     html{
-      font-size: 16px;
+      font-size: 15px;
+    }
+    .experience, .projects, .skills,.photos,.contact{
+      width: 100% !important;
     }
   }
   @media screen and (min-width: 680px){
     html{
-      font-size: 17px;
+      font-size: 15px;
+    }
+    .experience, .projects, .skills,.photos,.contact{
+      width: 100% !important;
     }
   }
   @media screen and (min-width: 720px){
     html{
-      font-size: 18px;
+      font-size: 15px;
+    }
+    .experience, .projects, .skills,.photos,.contact{
+      width: 100% !important;
     }
   }
   @media screen and (min-width: 800px){
     html{
-      font-size: 19px;
+      font-size: 16px;
+    }
+    .experience, .projects, .skills,.photos,.contact{
+      width: 100% !important;
     }
   }
   @media screen and (min-width: 860px){
     html{
       font-size: 20px;
     }
+    .experience, .projects, .skills,.photos,.contact{
+      width: 100% !important;
+    }
   }
   @media screen and (min-width: 920px){
     html{
       font-size: 21px;
     }
+    .experience, .projects, .skills,.photos,.contact{
+      width: 100% !important;
+    }
   }
   @media screen and (min-width: 1000px){
     html{
       font-size: 22px;
+    }
+    .experience, .projects, .skills,.photos,.contact{
+      width: 100% !important;
+    }
+  }
+
+  @media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+    html{
+      font-size: 14px;
+    }
+    .experience, .projects, .skills,.photos,.contact,.profile{
+      width: 100% !important;
     }
   }
 
